--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/Zemenay Main.png" />
+   <link rel="icon" type="image/png" href="/Zemenay Main.png" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Zemenay | Ethiopia's Leading Tech Company | Web & Mobile Development</title>
   </head>
